package bt_TH.observer.A5;

// observer
public interface TaiKhoanATM {
    boolean kiemTraSoDu(int soTien);
    void nhanThongBao(int soTienRut, boolean thanhCong);
}
